--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -362,8 +362,8 @@
                                                     id="newPoNumber">
                                             </div>
                                             <div class="flex-item">
-                                                <button class="btn btn-sm btn-primary"
-                                                    onclick="generateAndInsertOrder('institutionName')">Generate
+                                                <button id="generateAndInsertOrderBtn"
+                                                    class="btn btn-sm btn-primary">Generate
                                                     Order</button>
                                             </div>
                                         </div>
