--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -371,10 +371,11 @@
                                     <button type="button" id="newInstitutionBtn"
                                         class="btn btn-sm btn-primary btn-icon-only" data-toggle="modal"
                                         data-target="#newInstitutionModal">New</button>
-                                    <button type="submit" class="btn btn-sm btn-primary ml-2 btn-icon-only"
-                                        onclick="updateInstitutionDetails()">Update</button>
-                                    <button type="button" class="btn btn-sm btn-danger ml-2 btn-icon-only"
-                                        onclick="deleteInstitution()"><i class="fas fa-trash"></i></button>
+                                    <button id="updateInstitutionDetailsBtn" type="submit"
+                                        class="btn btn-sm btn-primary ml-2 btn-icon-only">Update</button>
+                                    <button id="deleteInstitutionBtn" type="button"
+                                        class="btn btn-sm btn-danger ml-2 btn-icon-only"><i
+                                            class="fas fa-trash"></i></button>
                             </div>
                             </form>
                         </div>
@@ -440,8 +441,8 @@
                             <option value="Pending">Pending</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-sm btn-primary btn-icon-only"
-                        onclick="CreateInstitution(event)">Insert</button>
+                    <button id="CreateInstitutionBtn" type="button"
+                        class="btn btn-sm btn-primary btn-icon-only">Insert</button>
                 </form>
             </div>
         </div>
